--- a/index.html
+++ b/index.html
@@ -6,5 +6,21 @@
     <link href="resources/style.css" type="text/css" rel="stylesheet"
   </head>
   <body>
+
+    <!-- Begin Header -->
+
+    <header>
+      <div class="logo">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png">
+      </div>
+      <div class="nav">
+        <span><a href="#">Mission</a></span>
+        <span><a href="#">Featured Teas</a></span>
+        <span><a href="#">Locations</a></span>
+      </div>
+    </header>
+
+    <!-- End Header -->
+
   </body>
 </html>
