--- a/index.html
+++ b/index.html
@@ -22,5 +22,16 @@
 
     <!-- End Header -->
 
+    <!-- Begin Mission Section -->
+
+    <div class="missionsection">
+      <div class="missioninfo">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      </div>
+    </div>
+
+    <!-- End Mission Section -->
+
   </body>
 </html>
