tea of the month text

--- a/index.html
+++ b/index.html
@@ -33,5 +33,16 @@
 
     <!-- End Mission Section -->
 
+    <!-- Begin Tea of the Month Section -->
+
+    <div class="teamonthtext">
+      <h2>Tea of the Month</h2><br>
+      <h4>What's Steeping at the Tea Cozy?</h4>
+    </div>
+    <div class="teamonthphotos">
+    </div>
+
+    <!-- End Tea of the Month Section -->
+
   </body>
 </html>
