tea of the month photos

--- a/index.html
+++ b/index.html
@@ -39,7 +39,20 @@
       <h2>Tea of the Month</h2><br>
       <h4>What's Steeping at the Tea Cozy?</h4>
     </div>
+
     <div class="teamonthphotos">
+      <div class="teaphoto1">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg">
+      </div>
+      <div class="teaphoto2">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg">
+      </div>
+      <div class="teaphoto3"><img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg">
+      </div>
+      <div class="teaphoto4"><img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg">
+      </div>
+      <div class="teaphoto5"><img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg">
+      </div>
     </div>
 
     <!-- End Tea of the Month Section -->
