tea of the month photos

--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
       <div class="teaphoto2">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg">
       </div>
-      <div class="teaphoto3"><img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg">
+      <div class="teaphoto3">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg">
       </div>
-      <div class="teaphoto4"><img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg">
+      <div class="teaphoto4">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg">
       </div>
-      <div class="teaphoto5"><img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg">
+      <div class="teaphoto5">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg">
       </div>
     </div>
 
