tea of the month photos and text

--- a/index.html
+++ b/index.html
@@ -50,12 +50,17 @@
       <div class="teaphoto3">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg">
       </div>
+      <div class="teaphototext">Fall Berry Blitz Tea</div>
+      <div class="teaphototext">Spiced Rum Tea</div>
+      <div class="teaphototext">Seasonal Donuts</div>
       <div class="teaphoto4">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg">
       </div>
       <div class="teaphoto5">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg">
       </div>
+      <div class="teaphototext four">Myrtle Ave Tea</div>
+      <div class="teaphototext five">Bedford Bizarre Tea</div>
     </div>
 
     <!-- End Tea of the Month Section -->
