--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       <div class="teaphoto3">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg">
       </div>
-      <div class="teaphototext">Fall Berry Blitz Tea</div>
+      <div class="teaphototext one">Fall Berry Blitz Tea</div>
       <div class="teaphototext">Spiced Rum Tea</div>
-      <div class="teaphototext">Seasonal Donuts</div>
+      <div class="teaphototext three">Seasonal Donuts</div>
       <div class="teaphoto4">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg">
       </div>
@@ -64,6 +64,34 @@
     </div>
 
     <!-- End Tea of the Month Section -->
+
+    <!-- Begin Locations Section -->
+
+    <div class="locationscontainer">
+      <div class="locations">
+        <h2>Locations</h2>
+      </div>
+      <div class="downtown">
+        <h3>Downtown</h3>
+        <p>383 West 4th St</p>
+        <p>Suite 108</p>
+        <p>Portland,Maine</p>
+      </div>
+      <div class="bayside">
+        <h3>East Bayside</h3>
+        <p>3433 Phisherman's Avenue</p>
+        <p>(Northwest Corner)</p>
+        <p>Portland, Maine</p>
+      </div>
+      <div class="oakdale">
+        <h3>Oakdale</h3>
+        <p>515 Crescent Avenue</p>
+        <p>Second Floor</p>
+        <p>Portland, Maine</p>
+      </div>
+    </div>
+
+    <!-- End Locations Section -->
 
   </body>
 </html>
