--- a/index.html
+++ b/index.html
@@ -71,19 +71,19 @@
       <div class="locations">
         <h2>Locations</h2>
       </div>
-      <div class="downtown">
+      <div class="address downtown">
         <h3>Downtown</h3>
         <p>383 West 4th St</p>
         <p>Suite 108</p>
         <p>Portland,Maine</p>
       </div>
-      <div class="bayside">
+      <div class="address bayside">
         <h3>East Bayside</h3>
         <p>3433 Phisherman's Avenue</p>
         <p>(Northwest Corner)</p>
         <p>Portland, Maine</p>
       </div>
-      <div class="oakdale">
+      <div class="address oakdale">
         <h3>Oakdale</h3>
         <p>515 Crescent Avenue</p>
         <p>Second Floor</p>
