footer and copyright

--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
         <p>Suite 108</p>
         <p>Portland,Maine</p>
       </div>
-      <div class="address bayside">
+      <div class="address">
         <h3>East Bayside</h3>
         <p>3433 Phisherman's Avenue</p>
         <p>(Northwest Corner)</p>
         <p>Portland, Maine</p>
       </div>
-      <div class="address oakdale">
+      <div class="address">
         <h3>Oakdale</h3>
         <p>515 Crescent Avenue</p>
         <p>Second Floor</p>
@@ -92,6 +92,22 @@
     </div>
 
     <!-- End Locations Section -->
+
+    <!-- Begin Footer Section -->
+
+    <footer>
+      <h2>The Tea Cozy</h2>
+      <h3>contact@theteacozy.com</h3>
+      <h3>917-555-8904</h3>
+    </footer>
+
+    <!-- End Footer Section -->
+
+    <!-- Begin Copyright Section -->
+
+    <p class="copyright">copyright The Tea Cozy 2017</p>
+
+    <!-- End Copyright Section -->
 
   </body>
 </html>
